--- a/src/visualizer/OctoVis/OctoVis/App.xaml
+++ b/src/visualizer/OctoVis/OctoVis/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="OctoVis.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:OctoVis"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Application.Resources>
 </Application>
