FRONTEND: Tab with exceptions added

--- a/src/visualizer/OctoVis/OctoVis/MainWindow.xaml
+++ b/src/visualizer/OctoVis/OctoVis/MainWindow.xaml
@@ -84,6 +84,22 @@
                 <TabItem.Header>
                     <Label Content="Exceptions" FontWeight="Bold" />
                 </TabItem.Header>
+                <Grid DataContext="{Binding .}">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="20" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding ExceptionCountInfo}"
+                              Grid.Row="1">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Type" Binding="{Binding Name}" IsReadOnly="true" FontSize="12" />
+                            <DataGridTextColumn Header="Count" Binding="{Binding Count}" IsReadOnly="true"
+                                                FontSize="12" />
+                            <DataGridTextColumn Header="Unique trace" Binding="{Binding UniqueStackTraces}"
+                                                IsReadOnly="True" FontSize="12" />
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </Grid>
             </TabItem>
             <TabItem DataContext="{Binding .}">
                 <TabItem.Header>
