--- a/src/visualizer/OctoVis/OctoVis/MainWindow.xaml
+++ b/src/visualizer/OctoVis/OctoVis/MainWindow.xaml
@@ -139,20 +139,36 @@
             </TabItem>
         </TabControl>
         <Grid Visibility="{Binding LogNotParsed, Converter={StaticResource BooleanToVisibilityConverter}}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
             <Button Margin="20"
                     Click="OpenLog_OnClick"
-                    Content="Pick a log"
-                    FontWeight="Bold"
-                    FontSize="20" />
+                    Background="White">
+                <Button.Content>
+                    <StackPanel>
+                        <Image Source="Images/log.png" Width="600"/>
+                        <TextBlock Text="Pick a log" TextAlignment="Center"
+                                   FontWeight="Bold"
+                                   FontSize="20"/>
+                    </StackPanel>
+                </Button.Content>
+            </Button>
             <Button Grid.Column="1" Margin="20"
                     Click="ProfileApp_OnClick"
-                    Content="Profile application"
-                    FontWeight="Bold"
-                    FontSize="20" />
+                    Background="White"
+                    >
+                <Button.Content>
+                    <StackPanel>
+                        <Image Source="Images/profile.png" Width="600" />
+                        <TextBlock Text="Profile application"
+                                   FontWeight="Bold"
+                                   FontSize="20"
+                                   TextAlignment="Center" />
+                    </StackPanel>
+                </Button.Content>
+            </Button>
         </Grid>
     </Grid>
 </Window>
