--- a/src/visualizer/OctoVis/OctoVis/PerformanceProfileWindow.xaml
+++ b/src/visualizer/OctoVis/OctoVis/PerformanceProfileWindow.xaml
@@ -3,10 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:OctoVis"
+        xmlns:control="clr-namespace:OctoVis.Control"
         mc:Ignorable="d"
         Title="PerformanceProfileWindow" Height="450" Width="800">
     <Grid>
-        
+        <control:TraceCallsControl EnterExitCalls="{Binding EnterExitModel}" />
     </Grid>
 </Window>
