FRONTEND: Option to setup foreground color

--- a/src/visualizer/OctoVis/OctoVis/PerformanceProfileWindow.xaml
+++ b/src/visualizer/OctoVis/OctoVis/PerformanceProfileWindow.xaml
@@ -21,7 +21,8 @@
             <Label Content=".NET detected:" />
             <Label Content="{Binding NetVersion}" />
         </StackPanel>
-        <control:ThreadsControl ThreadsPerfInfo="{Binding ThreadPerfInfo}" Grid.Row="2"/>
+        <control:ThreadsControl ThreadsPerfInfo="{Binding ThreadPerfInfo}"
+                                Foreground="Firebrick" Grid.Row="2"/>
         <control:TraceCallsControl EnterExitCalls="{Binding EnterExitModel}" Grid.Row="3"/>
     </Grid>
 </Window>
