--- a/src/visualizer/OctoVis/OctoVis/MemoryProfileWindow.xaml
+++ b/src/visualizer/OctoVis/OctoVis/MemoryProfileWindow.xaml
@@ -106,7 +106,7 @@
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Type" Binding="{Binding Name}" IsReadOnly="true"
                                                 FontSize="12" />
-                            <DataGridTextColumn Header="Thread" Binding="{Binding ThreadId}" IsReadOnly="True"
+                            <DataGridTextColumn Header="Thread" Binding="{Binding ThreadName}" IsReadOnly="True"
                                                 FontSize="12" />
                             <DataGridTextColumn Header="Count" Binding="{Binding Count}" IsReadOnly="true"
                                                 FontSize="12" />
